--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
+    "classnames": "^2.3.1",
+    "immer": "^9.0.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "recoil": "^0.7.3-alpha.2",
+    "recoil-persist": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
