--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.3.1",
     "immer": "^9.0.14",
     "react": "^18.1.0",
+    "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
